[tool.poetry]
name = "ioemu"
version = "0.3.2"
description = "IO Emulator with LEDs and buttons"
readme = "README.md"
authors = ["Marco Bakera <marco@bakera.de>"]
license = "MIT"
homepage = "https://tbs1-bo.github.io/ioemu/"
repository = "https://github.com/tbs1-bo/ioemu"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Education :: Testing"
]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.11.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
jupyter = "^1.0.0"  # For converting the Jupyter-Notebook into the readme
#nbconvert = "^6.2.0"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.scripts]
ioemu = "ioemu:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
